# oxide-loader

./: .gitignore  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  builder.py
builder/: Cargo.toml
builder/src/: constants.rs  crypto.rs  main.rs  stage1_builder.rs  stage2_builder.rs  stage3_builder.rs
detection/sigma/: stage1_network.yml  stage2_debug_check.yml  stage2_sandbox.yml  stage2_vm_check.yml  stage3_injection.yml
detection/volatility/: README.md
detection/yara/: stage1_imports.yar  stage1_magic.yar  stage1_xor.yar  stage2_antidebug.yar  stage2_antivm.yar  stage3_injection.yar
stage1/: Makefile
stage1/src/: config.h  http.h  http_linux.c  http_win.c  main.c  mem_exec.h  mem_exec_linux.c  mem_exec_win.c  xor.c  xor.h
stage2/: Cargo.toml
stage2/src/: constants.rs  crypto.rs  main.rs
stage2/src/anti_analysis/: debugger.rs  mod.rs  sandbox.rs  timing.rs  vm_detect.rs
stage3/: Cargo.toml
stage3/src/: constants.rs  crypto.rs  main.rs  payload.rs
stage3/src/injection/: hollow.rs  linux.rs  mod.rs  pe_map.rs  stub.rs  winapi.rs  windows.rs  wth.rs
