[package]
name = "oxide-builder"
version = "0.1.0"
edition = "2021"
authors = ["diemoeve"]
description = "Builder CLI for oxide loader chain payload generation"

[[bin]]
name = "oxide-builder"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Crypto (oxide-compatible)
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Hex encoding
hex = "0.4"
