[package]
name = "stage3"
version = "0.1.0"
edition = "2021"
authors = ["diemoeve"]
description = "Stage 3 injector for oxide implant delivery"

[dependencies]
# Crypto (oxide-compatible)
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"

# Error handling
thiserror = "1.0"

# No Windows-specific crate dependencies needed (drop-to-disk uses std only)

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
